dfir_rs/tests/compile-fail-stable/surface_partition_port_duplicate.stderr
error: Output connection conflicts with below (unknown:15:21) (1/2)
  --> tests/compile-fail-stable/surface_partition_port_duplicate.rs:14:22
   |
14 |         my_partition[c] -> for_each(std::mem::drop);
   |                      ^

error: Output connection conflicts with above (unknown:14:21) (2/2)
  --> tests/compile-fail-stable/surface_partition_port_duplicate.rs:15:22
   |
15 |         my_partition[c] -> for_each(std::mem::drop);
   |                      ^

error[E0599]: no method named `run_available_sync` found for unit type `()` in the current scope
  --> tests/compile-fail-stable/surface_partition_port_duplicate.rs:17:8
   |
17 |     df.run_available_sync();
   |        ^^^^^^^^^^^^^^^^^^ method not found in `()`
